--- a/djangotest/djangoapp/templates/djangoapp/home.html
+++ b/djangotest/djangoapp/templates/djangoapp/home.html
@@ -5,6 +5,6 @@
    <title>Vet Office</title>
 </head>
 <body>
-  <h1>Welcome to the django app Page</h1>
+  <h1>Welcome to the django app page</h1>
 </body>
 </html>
